@@ -1,8 +1,9 @@
-# FROM eclipse-temurin:17-jre-alpine
-FROM eclipse-temurin:17-jdk
+FROM eclipse-temurin:17-jre-alpine
 
 COPY . /app
 
+# Các JVM flags mặc định
+ENV JAVA_DEFAULT_OPTS="-XX:+UseContainerSupport -XX:MaxRAMPercentage=75.0 -XX:+CrashOnOutOfMemoryError"
 
-# ENTRYPOINT ["java","-XX:+UseZGC","-XX:ErrorFile=/config/hs_err_pid%p.log","-XX:+HeapDumpOnOutOfMemoryError", "-XX:HeapDumpPath=/config/heap.hprof","-XX:NativeMemoryTracking=detail" ,"-jar", "/app/server-release.jar"]
-ENTRYPOINT ["java", "-XX:+UseContainerSupport", "-XX:MaxRAMPercentage=75.0", "-XX:+CrashOnOutOfMemoryError", "-Xmx512m","-jar", "/app/server-release.jar"]
+# Dùng shell để gộp JAVA_OPTS và JAVA_DEFAULT_OPTS
+ENTRYPOINT sh -c 'exec java $JAVA_DEFAULT_OPTS $JAVA_OPTS -jar /app/server-release.jar'
